# django-template-htmx

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/core/: settings.py  urls.py
backend/static/css/: style.css  style.min.css  tailwind.css
backend/templates/: 404.html  base.html  home.html
backend/templates/includes/: header.html
backend/templates/layouts/: box.html
backend/templates/partials/: email_form.html
backend/users/: forms.py  models.py  signals.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
backend/users/templates/users/: profile_delete.html  profile_edit.html  profile_settings.html
backend/users/test/: tests_view.py
