[project]
name = "django-core-template"
version = "0.0.1"
description = ""
authors = [
    {name = "Carlos Eduardo",email="<ducameneses16@gmail.com>"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "django (==5.0.6)",
    "pillow>=10.3.0",
    "django-cleanup>=8.1.0",
    "django-allauth>=0.63.2",
    "django-htmx>=1.17.3",
    "django-environ (>=0.12.0,<0.13.0)",
    "whitenoise (>=6.9.0,<7.0.0)",
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
ruff = "^0.4.5"
taskipy = "^1.14.1"

[tool.ruff]
line-length = 88
exclude = ['.venv','manage.py']
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

